third_party/rust/chromium_crates_io/vendor/num_enum-v0_7/tests/try_build/compile_fail/missing_repr.rs
#[derive(num_enum::IntoPrimitive)]
enum Numbers {
    Zero,
    One,
}

fn main() {}
