third_party/rust/chromium_crates_io/vendor/num_enum-v0_7/tests/try_build/compile_fail/missing_repr.stderr
error: Missing `#[repr({Integer})]` attribute
 --> $DIR/missing_repr.rs:1:10
  |
1 | #[derive(num_enum::IntoPrimitive)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `num_enum::IntoPrimitive` (in Nightly builds, run with -Z macro-backtrace for more info)
